--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: 'Epilogue', sans-serif;
+}
+
 ::-webkit-scrollbar{
     display: none;
 }
